# Bode

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb
.ipynb_checkpoints/: test-checkpoint.txt
Bode/: Analysis.h
BodeDataSim/: SimEngine.h
include/: Analysis.h
src/: Analysis.cpp  Simulate.cpp
